final touchups